enable native access for javafx.graphics during tests
references #3882